Design for header component

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
-remove break me sign
-error boundaries and error handling
-bonus question
-add tests?
+make header into a seperate component
+add tests
 Design
+Toaster explaining the point of the repo?
