--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,6 @@
 restructure comments into a better way so that we don't use Proptypes.any and also loading flag things to make a graphql type structure
 move resize recording into seperate file - as redux middleware?
 use theme file
-Toaster explaining the point of the repo?Ì
+Toaster explaining the point of the repo?
 proptypes
 loading messages
-
-styled components not auto correcting properly
