--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 restructure comments into a better way so that we don't use Proptypes.any and also loading flag things to make a graphql type structure
-move resize recording into seperate file - as redux middleware?
 use theme file
-Toaster explaining the point of the repo?
 proptypes
 loading messages
+readme description
+
+move resize recording into seperate file - as redux middleware?
+Toaster explaining the point of the repo? or a link to the readme?
