--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@ use theme file
 proptypes
 loading messages
 readme description
+nav bar animation plays on load
 
 move resize recording into seperate file - as redux middleware?
 Toaster explaining the point of the repo? or a link to the readme?
