--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
-restructure comments into a better way so that we don't use Proptypes.any and also loading flag things to make a graphql type structure
-proptypes
+restructure comments into a better way so that we don't use Proptypes.any and also loading flag things to make a graphql type structure - and then check proptypes
+
 loading messages
 readme description
 use github actions?
